fix: prevent text overflow in download button styling

--- a/src/components/DownloadButton/DownloadButton.module.scss
+++ b/src/components/DownloadButton/DownloadButton.module.scss
@@ -29,6 +29,7 @@
     font-weight: 600;
     line-height: 1;
     min-height: var(--download-button-height);
+    white-space: nowrap;
     text-decoration: none;
     transition:
         transform $transition-fast,
